# litter-detection

./: .env  .gitignore  README.md  best_threshold.json  pyproject.toml
artifacts/mlflow/: mlflow.db
auto-research/: analysis.ipynb  prepare.py  program.md  train.py
docker/: docker-compose.yml
docker/grafana/dashboards/: grafana-dashboard.json  litter-detection.json
docker/grafana/provisioning/dashboards/: dashboards.yaml  dashboards.yml
docs/: explainer.md  student_task.md  student_task_2.md
docs/diagrams/: augmentation.excalidraw  combined_loss.excalidraw  iou_dice.excalidraw  onecyclelr.excalidraw  training_diagram.excalidraw
prompts/: epochen_update.md  ordnerstruktur.md  prompt_metricen.md
scripts/: fix-abs-path.py
src/: config.py
src/agent/: doku_agent.md
src/camera/: webcam.py
src/config/: config.py
src/interference/: detector.py  interference.py
src/visualisation/: visualiser.py  yolo_visualiser.py
